// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render nested 1`] = `
<h1
  className="styled-H1-s9f816 styled-H1-4svmq01"
>
  hello world
</h1>
`;

exports[`styled name 1`] = `
<h1
  className="styled-H1-131pfth styled-H1-4svmq02"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
<h1
  className="styled-H1-ijh7uz styled-H1-4svmq00"
>
  hello world
</h1>
`;

exports[`styled writes the correct css 1`] = `
".styled-H1-ijh7uz {
    font-size: 12px
}
.styled-H1-s9f816 {
    font-size: 20px
}
.styled-H1-s9f816 span {
    color: blue
}
.styled-H1-s9f816 span:hover {
    color: green
}
.styled-H1-s9f816 span:hover:after {
    content: 'after'
}
.styled-H1-131pfth {
    name: FancyH1;
    font-size: 38px
}
html {
    background: pink
}
.css-14yvnlz {
    font-family: sans-serif;
    color: yellow;
    background-color: purple
}"
`;
